--- a/index.html
+++ b/index.html
@@ -48,9 +48,12 @@
     </div>
 
     <script src="util/observer.js"></script>
-    <script src="controller/game-memory.js"></script>
-    <script src="controller/game-controller.js"></script>
-    <script src="controller/render-controller.js"></script>
+    <script src="util/table.js"></script>
+    <script src="util/delay.js"></script>
+    <script src="scripts/game-memory.js"></script>
+    <script src="scripts/game-controller.js"></script>
+    <script src="scripts/render-controller.js"></script>
+    <script src="scripts/ai.js"></script>
     <script src="index.js"></script>
 </body>
 
