--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="util/observer.js"></script>
     <script src="util/table.js"></script>
     <script src="util/delay.js"></script>
+    <script src="util/random-number.js"></script>
     <script src="scripts/game-memory.js"></script>
     <script src="scripts/game-controller.js"></script>
     <script src="scripts/render-controller.js"></script>
