add pop up winner

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <div class="player-username"><span>Player 1</span></div>
                 </div>
             </div>
+            <div class="winner-pop-up">Você Venceu!!!<br /><span class="player-winner-name"></span></div>
         </div>
         <div class="menu">
             <div class="menu-option">
